--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,39 +11,45 @@
     "deploy": "npm run build && aws s3 sync out/ s3://$S3_BUCKET --delete"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.2.2",
-    "@types/node": "20.8.0",
-    "@types/react": "18.2.25",
-    "@types/react-dom": "18.2.11",
-    "tailwindcss": "3.3.5",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.31",
     "@headlessui/react": "1.7.17",
     "@heroicons/react": "2.0.18",
-    "recharts": "2.8.0",
-    "date-fns": "2.30.0",
-    "clsx": "2.0.0",
-    "lucide-react": "0.290.0",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-toast": "1.1.5",
-    "react-hook-form": "7.47.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "20.8.0",
+    "@types/react": "18.2.25",
+    "@types/react-dom": "18.2.11",
+    "autoprefixer": "10.4.16",
     "axios": "1.5.1",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "2.0.0",
+    "date-fns": "2.30.0",
     "framer-motion": "10.16.4",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "0.290.0",
+    "next": "14.0.0",
+    "postcss": "8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.47.0",
     "react-markdown": "9.0.1",
-    "react-syntax-highlighter": "15.5.0"
+    "react-syntax-highlighter": "15.5.0",
+    "recharts": "2.8.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "3.3.5",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "eslint": "8.51.0",
-    "eslint-config-next": "14.0.0",
     "@tailwindcss/forms": "0.5.6",
-    "@tailwindcss/typography": "0.5.10"
+    "@tailwindcss/typography": "0.5.10",
+    "eslint": "8.51.0",
+    "eslint-config-next": "14.0.0"
   },
   "keywords": [
     "aws",
